refactored directory path

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 .idea
 .vs
-/Assignment1/Sample Data
-/Assignment1/bin
-/Assignment1/obj
-/Assignment1/.DS_STORE
-/Assignment1/testWriteToFile.csv
+/ProgAssign1/Sample Data
+/ProgAssign1/bin
+/ProgAssign1/obj
+/ProgAssign1/.DS_STORE
+/ProgAssign1/testWriteToFile.csv
 .DS_STORE
